--- a/infra/addons/traefik/Chart.yaml
+++ b/infra/addons/traefik/Chart.yaml
@@ -6,5 +6,5 @@ version: 0.1.0
 appVersion: "1.0"
 dependencies:
   - name: traefik
-    version: 37.3.0
-    repository: https://helm.traefik.io/traefik
+    version: 38.0.2
+    repository: https://traefik.github.io/charts
